feat(product)replace currencyId with currencyCode
